# quant-report

./: README.md  main.py  pyproject.toml
docs/: index.html
src/: config.py  render.py  template.html
